gcc/ChangeLog 	Backported from mainline 	2012-10-19  Zhenqiang Chen <zhenqiang.chen@linaro.org>

PR target/54892
	* config/arm/arm.c (arm_expand_compare_and_swap): Use SImode to make
	sure the mode is correct when falling through from above cases.

	gcc/testsuite/ChangeLog
	Backported from mainline
	2012-10-19  Zhenqiang Chen <zhenqiang.chen@linaro.org>

	PR target/54892
	* gcc.target/arm/pr54892.c: New.

From-SVN: r192610